erDiagram
    User ||--o{ WorkspaceMember : "joins"
    User ||--o{ Workspace : "owns"
    Workspace ||--o{ WorkspaceMember : "has"
    Workspace ||--o{ WorkspaceInvitation : "issues"
    Workspace ||--o{ Project : "contains"
    Workspace ||--o{ GitHubInstallation : "installs"
    Project ||--o{ Task : "has"
    Project ||--o{ Thread : "discusses"
    Project ||--o{ Wiki : "documents"
    Project ||--o{ Label : "tags"
    Project ||--|| GitHubRepository : "links"
    Task ||--o{ TaskComment : "comments"
    Task ||--o{ TaskAttachment : "uploads"
    Task ||--o{ TaskDependency : "depends"
    Task ||--|| GitHubIssue : "mirrors"
    Task ||--o{ GitHubPullRequest : "PRs"
    Thread ||--o{ ThreadReply : "replies"
    ThreadReply ||--o{ ThreadReply : "parent"
    Thread ||--o{ Reaction : "polymorphic"
    ThreadReply ||--o{ Reaction : "polymorphic"
    Task ||--o{ Reaction : "polymorphic"
    TaskComment ||--o{ Reaction : "polymorphic"
    User ||--o{ Notification : "receives"
    User ||--o{ Media : "uploads"
    User ||--o{ Task : "assigned"
    Label ||--o{ Task : "tags"
    GitHubInstallation ||--o{ GitHubRepository : "owns"
    GitHubRepository ||--o{ GitHubIssue : "issues"
    GitHubRepository ||--o{ GitHubPullRequest : "PRs"
    GitHubRepository ||--o{ GitHubBranch : "branches"
    TaskDependency }o--|| Task : "blocks"
